# OK-MAN

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: backtest.yaml  base.yaml  feeds.yaml  llm.yaml  mt5.yaml  risk.yaml  routing.yaml  strategies.yaml  symbols.yaml  walkforward.yaml
docs/: ARCHITECTURE.md  BRIDGE_MT5.md  ORDERFLOW.md  PLAYBOOKS.md  RISK.md
src/api/: schemas.py  server.py
src/backtest/: engine.py  reporting.py  scenarios.py
src/common/: clock.py  feature_store.py  indicators.py  srl.py  ta_confluence.py  types.py  utils.py  volume_volatility.py
src/execution/: router.py  slippage_tca.py
src/execution/mt5_bridge/: bridge.py  protocol.py
src/ingest/: market_feed.py  news_feed.py  sentiment_llm.py
src/ingest/web/: cache.py  fetchers.py
src/llm_agents/: coder.py  researcher.py  reviewer.py
src/ml/: dataset.py  predictors.py  rl_agent.py
src/ops/: health.py  logging.py  metrics.py
src/optimize/: bayes_opt.py  ga_gp.py  walk_forward.py
src/orderflow/: lob_features.py  lob_model.py  tape_features.py
src/regime/: classifier.py
src/research/: corpus_store.py  feature_miner.py  promotion.py  reviewer.py  sandbox_runner.py  strategist.py
src/risk/: limits.py  sizing.py  stops_tps.py
src/security/: approvals.py  policy.py  sandbox.py  scanner.py
src/strategy/: dsl.py  gates.py  signal_ensemble.py
src/strategy/pack/: __init__.py  base.py  breakout_with_retest.py  htf_trend_pullback.py  maker_edge_micro_mm.py  momentum_ignition.py  (+6 more)
structlog/: __init__.py
tests/backtests/: test_backtest_engine.py
tests/integration/: test_api.py
tests/unit/: test_dsl.py  test_gate.py  test_indicators.py  test_risk.py  test_router.py
(+7 files in other folders)
